Bug 1223734 - AudioChannelService should not be re-initialized after the XPCOM shutdown, r=smaug